style(flyway-367): resolve SonarQube findings on the guard tests
Six issues, five reported plus one of the same class in the sibling.

  L172/L318/L414  collect(toList()) -> toList()
  L297            drop dead `throws IOException`
  L589            multi-line literal -> text block
  sibling L77     collect(Collectors.toList()) -> toList()

Each checked rather than pattern-matched, because Stream.toList() returns an
UNMODIFIABLE list and the rule is only safe if nothing writes to the result:

  - offenders (L172), missing (L318) and unclassified (L414) are read only —
    .isEmpty() and then streamed by bullets(). A grep for `offenders.add` does
    hit line 210, but that is a DIFFERENT local of the same name in check 2,
    declared as an ArrayList. The collect result is never touched.
  - check 4's `throws IOException` is genuinely dead: read() wraps IOException
    in UncheckedIOException, and nothing else in the method throws checked.
  - the text block keeps the closing delimiter on its own line, preserving the
    trailing newline, so the asserted string is byte-identical.

The sibling's Collectors.toList() is the same rule in a file this PR already
touches; leaving it would just book a second ticket for the same one-line fix.
Its `collisions` list is likewise read-only. Both now-unused imports removed;
`joining` stays, since bullets() still uses it.

Verified beyond the green suite, because a green suite is what this ticket
exists to distrust — and the text block I rewrote IS the comment-trap
assertion's input. Replanted every bypass: all four named in one failure
(comment trap, underscore version, subdirectory, INSERT FIRST), and the sibling
still reports V88.1__dotted + V88_1__underscore as one collision.

Unit 1305/1305, Spotless clean, 0 Checkstyle violations.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>